📝 server側だってわかるようにindex.htmlを変更

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 </head>
 
 <body>
+	<h1>ここはserverです</h1>
 	<ul id="messages"></ul>
 	<form id="form" action="">
 		<input id="input" autocomplete="off" /><button>Send</button>
